--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,19 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('asset/css/boostrap.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Bad+Script&family=Neucha&display=swap" rel="stylesheet">
+
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -11,9 +24,34 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
+        {% endblock %} 
+ </head> 
+<body>
+    <nav class="navbar">
+    <a href="#" class="logo"> A & J's WEDDING </a>
+
+    <div class="nav-links">
+      <ul>
+        <li class="active"><a href="#">HOME</a></li>
+        <li><a href="#">OUR STORY</a></li>
+        <li><a href="#">MENU & ACTIVITIES</a></li>
+        <li><a href="#">RSVP</a></li>
+      </ul>
+    </div> 
+
+    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
+
+
+    </nav>
+ 
+ 
+<header></header>
+   
+
+
+ 
         {% block body %}{% endblock %}
     </body>
+
+   
 </html>
