--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" href="https://media.discordapp.net/attachments/290242065277648897/1072586733805375621/Capture_decran_2023-02-07_a_19.36.32.png">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
@@ -28,14 +28,14 @@
  </head> 
 <body>
     <nav class="navbar">
-    <a href="#" class="logo"> A & J's WEDDING </a>
+    <a href="/home" class="logo"> A & J's WEDDING </a>
 
     <div class="nav-links">
       <ul>
-        <li class="active"><a href="#">HOME</a></li>
-        <li><a href="#">OUR STORY</a></li>
+        <li class="active"><a href="/home">HOME</a> </li> 
+        <li><a href="/story">OUR STORY</a> </li>
         <li><a href="#">MENU & ACTIVITIES</a></li>
-        <li><a href="#">RSVP</a></li>
+        <li><a href="#">RSVP & INFOS </a></li>
       </ul>
     </div> 
 
