--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,11 +3,34 @@
 {% block title %}Home index{% endblock %}
 
 {% block body %}
+
+ <nav class="navbar">
+    <a href="/home" class="logo"> A & J's WEDDING </a>
+
+    <div class="nav-links">
+      <ul>
+        <li class="active"><a href="/home">HOME</a> </li> 
+        <li><a href="/story">OUR STORY</a> </li>
+        <li><a href="/gallery">OUR GALLERY</a> </li>
+        
+        <li><a href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a href="#">RSVP & INFOS </a></li>
+      </ul>
+    </div> 
+
+    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
+
+
+    </nav>
+ 
+ 
+<header></header>
+   
 <body class="home">
 <div class="container"> 
 
-    <h1 class="ml16"> 03 • 12 • 2023 </h1>
-    <h1 class="ml16"> - March 12th, 2023 -</h1>
+    <h1 class="ml16" style='color:#67595E;'> 03 • 12 • 2023 </h1>
+    <h1 class="ml16"style='color:#67595E;'> - March 12th, 2023 -</h1>
 
     <h3 class="ml16"> Forest Park </h3>
     <h3 class="ml16"> 4099 NW Thurman St Portland OR </h3>
@@ -42,7 +65,7 @@
 
     <div class="map">
 
-        <h3 style='color:white'>YOU HAVE NO IDEA HOW TO GET THERE ?</h3>
+        <h3 style='color:white '>YOU HAVE NO IDEA HOW TO GET THERE ?</h3>
         <button> CLICK HERE ! <i class="fa-regular fa-heart"></i> </button>
 
     </div>
