--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,12 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}">
-        <link rel="stylesheet" href="{{ asset('asset/css/boostrap.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,25 +29,6 @@
         {% endblock %} 
  </head> 
 <body>
-    <nav class="navbar">
-    <a href="/home" class="logo"> A & J's WEDDING </a>
-
-    <div class="nav-links">
-      <ul>
-        <li class="active"><a href="/home">HOME</a> </li> 
-        <li><a href="/story">OUR STORY</a> </li>
-        <li><a href="#">MENU & ACTIVITIES</a></li>
-        <li><a href="#">RSVP & INFOS </a></li>
-      </ul>
-    </div> 
-
-    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
-
-
-    </nav>
- 
- 
-<header></header>
    
 
 
