--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -3,98 +3,101 @@
 {% block title %}Story index{% endblock %}
 
 {% block body %}
-   <body class="story">
-   <h3 class="titreStory d-flex justify-content-center m-5"> Some pictures of us ! - <i class="fa-regular fa-heart"> </i>-</h3> 
-<div class="container">
 
-   <div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://img.freepik.com/free-photo/young-bride-groom-having-beach-wedding_23-2149044014.jpg?w=1380&t=st=1675806053~exp=1675806653~hmac=006b7e1583efe70ee458b1af7669503301250efb7b7bd40c6a5d49d6e160af82" class="imgC d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://img.freepik.com/free-photo/young-bride-groom-having-beach-wedding_23-2149043995.jpg?w=1380&t=st=1675806055~exp=1675806655~hmac=f44e99a3075cd3b37ba864245763cdacfb8424b9c53fbcd49794759e39da4b00" class="imgC d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://img.freepik.com/free-photo/bride-groom-having-their-wedding-beach_23-2149043954.jpg?w=1380&t=st=1675796114~exp=1675796714~hmac=9c94ac9452ada7cb0af984eaae915e41836690f6b2f0d218b3aab9fe49ef98a7" class="imgC d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>  
+<div class="navbarStory">
+<nav class="navbar">
+    <a href="/home" class="logo"> A & J's WEDDING </a>
+
+    <div class="nav-links">
+      <ul>
+        <li class="active"><a href="/home">HOME</a> </li> 
+        <li><a href="/story">OUR STORY</a> </li>
+        <li><a href="/gallery">OUR GALLERY</a> </li>
+        
+        <li><a href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a href="#">RSVP & INFOS </a></li>
+      </ul>
+    </div> 
+
+    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
-
-<h3 class="titreStory d-flex justify-content-center m-5"> The newlyweds -<i class="fa-regular fa-heart"></i>-</h3> 
-   <div id="pp"> 
-   
-     <div class="mrs"> <img src="https://img.freepik.com/free-photo/beautiful-bride-portrait-beach_23-2149044002.jpg?w=740&t=st=1675806312~exp=1675806912~hmac=5a18d9c29eab060ea8f13d1ff874966d68c2ee805f858073127924b71925d937" alt="" ></div>
-
-    
-
-    <h1 class="ml5">
-  <span class="text-wrapper">
-  
-    <span class="letters letters-left d-flex justify-content-center m-5">Amelia  </span>
-    <span class="letters ampersand d-flex justify-content-center align-items-center m-5 "> &amp; </span>
-    <span class="letters letters-right d-flex justify-content-center ">Joseph </span>
+    </nav>
  
-  </span>
-</h1>
+ 
+<header class="headerStory"> 
+
+  <h2 class="h2Story d-flex justify-content-center"> Our story -  made with love </h2>
+
+</header>
+
+
+
+
+ 
+    
+    <div class="article d-flex justify-content-center">
+        
+        <div class="txtArt "> 
+        <h3 class="h3Story" style='color:#67595E;'> We are together !</h3>
+        <p style='color:#67595E;'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel eros accumsan, varius velit sed, rhoncus elit. Sed ultricies, neque tincidunt facilisis auctor, tellus diam posuere ex, sit amet tincidunt nisi sapien vitae justo. Pellentesque consequat mattis nisl, sit amet hendrerit magna interdum sed. Nunc at facilisis velit, ut tincidunt ex. Quisque at erat eu ante pulvinar mollis. Vestibulum sed volutpat turpis. Donec congue erat vitae diam malesuada fringilla. Aenean molestie finibus accumsan. Pellentesque lacus magna, rutrum bibendum metus a, vulputate posuere erat. Morbi vel iaculis velit. </p>
+        </div>
+        
+
+    </div>
+
+    <div class="arts">
+
+       <div class="art1">
+       <div class="txt1">
+       <h3 class="h3Story">Love at first sight</h3>
+       <p>Duis euismod magna ipsum. Integer quam magna, lacinia vitae massa in, facilisis elementum neque. Phasellus turpis orci, tincidunt at egestas vehicula, mollis posuere eros. Morbi at elit varius, suscipit dui et, dignissim lorem. Curabitur molestie diam in nulla tempus posuere. Integer convallis ex a arcu sollicitudin, ut varius ligula fringilla. Maecenas mattis orci massa, a feugiat diam euismod sed. Donec convallis accumsan lorem a hendrerit.</p> 
+
+       <input type="checkbox" checked="checked" id="favorite" name="favorite-checkbox" value="favorite-button">
+       <label for="favorite" class="container">
+       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+       <div class="action">
+       <span class="option-1">Add to Favorites</span>
+       <span class="option-2">Added to Favorites</span>
+       </div>
+       </label>
+       </div>
+
+
+       <div> <img src="https://img.freepik.com/free-photo/young-bride-groom-having-beach-wedding_23-2149043996.jpg?w=1380&t=st=1675880962~exp=1675881562~hmac=4e5a2e114f0c67c26d2cdddec36c1cf99e60959d17a9c17dac5134ad14b6dee3" class="artImg"alt=""></div>
+       </div>
+
+
+
+       <div class="art2">
+       <div> <img src="https://img.freepik.com/free-photo/bride-groom-holding-their-rings_23-2149043976.jpg?w=1380&t=st=1675881031~exp=1675881631~hmac=b2d0d0d67dd3acdad860d840012271af568aa0a4cff2456a29f478fc1c7dc5f7" class="artImg" alt=""></div>
+       <div class="txt2">
+       <h3 class="h3Story">She said yes !</h3>
+       <p>Proin viverra neque massa, sit amet convallis lorem dictum sed. Curabitur euismod id enim nec viverra. Vivamus eu tristique quam, eu mattis metus. Maecenas eget purus libero. Nullam gravida mauris quis justo egestas, et faucibus mauris efficitur. Etiam elementum leo vel aliquet posuere. Nunc efficitur tellus quis tellus consectetur dictum. Sed augue odio, tempus et euismod in, vulputate vitae justo. Maecenas feugiat eros ac enim porta pulvinar.</p>
+
+       <input type="checkbox" checked="checked" id="favorite" name="favorite-checkbox" value="favorite-button">
+       <label for="favorite" class="container">
+       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
+       <div class="action">
+       <span class="option-1">Add to Favorites</span>
+       <span class="option-2">Added to Favorites</span>
+       </div>
+       </label>
+       </div>
+
+       
+    
+    
+    </div>
+
+
+
+
+
+ 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-
-
-   
-    <div class="mr"> <img src="https://img.freepik.com/free-photo/portrait-handsome-groom-his-beach-wedding_23-2149044004.jpg?w=740&t=st=1675806334~exp=1675806934~hmac=8ea6268e1e32fb2d6208eb3d71ef947bbaced33ba74a60fd2001aa3dbcb875ed" alt="" ></div>
-
-   </div>
-
-
- 
-
-
-<script> 
-    
-    window.onload = function(){
-  var slides = document.getElementsByClassName('carousel-item'),
-      addActive = function(slide) {slide.classList.add('active')},
-      removeActive = function(slide) {slide.classList.remove('active')};
-  addActive(slides[0]);
-  
-  setInterval(function (){
-    for (var i = 0; i < slides.length; i++){
-      if (i + 1 == slides.length) {
-        addActive(slides[0]);
-        slides[0].style.zIndex = 100;
-        setTimeout(removeActive, 350, slides[i]); //Doesn't be worked in IE-9
-        break;
-      }
-      if (slides[i].classList.contains('active')) { 
-        slides[i].removeAttribute('style');
-        setTimeout(removeActive, 350, slides[i]); //Doesn't be worked in IE-9
-        addActive(slides[i + 1]);
-        break;
-      }
-    } 
-  }, 4000);
-}
-  
-    
-</script>
 
 <script>
 
