--- a/templates/gallery/index.html.twig
+++ b/templates/gallery/index.html.twig
@@ -5,16 +5,16 @@
 {% block body %}
     <div class="navbarGallery " style="background-color:;">
 <nav class="navbar">
-    <a href="/home" class="logo"> A & J's WEDDING </a>
+    <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
     <div class="nav-links">
       <ul>
-        <li class="active"><a href="/home">HOME</a> </li> 
-        <li><a href="/story">OUR STORY</a> </li>
-        <li><a href="/gallery">OUR GALLERY</a> </li>
+        <li class="lien active"><a href="/home">HOME</a> </li> 
+        <li><a class="lien" href="/story">OUR STORY</a> </li>
+        <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a href="/menu">MENU & ACTIVITIES</a></li>
-        <li><a href="#">RSVP & INFOS </a></li>
+        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
 
@@ -85,8 +85,8 @@
        <div class="card" style="width: 18rem;">
        <img src="https://img.freepik.com/free-photo/portrait-handsome-best-man_23-2149044030.jpg?w=740&t=st=1675866496~exp=1675867096~hmac=1bf1d4f82dafc6ae1bd29fe317739fb92631428d1499a0c0f6cceb31681c1aa4" class="card-img-top" alt="...">
        <div class="card-body">
-       <h4 class="ml16" style='color:#67595E;'>Scott Freeman</h4>
-       <p class="card-text ml16" style='color:#67595E;'>GROOMSMEN</p>
+       <h4 class="" style='color:#67595E;'>Scott Freeman</h4>
+       <p class="card-text " style='color:#67595E;'>GROOMSMEN</p>
        </div>
        </div> 
 
@@ -94,24 +94,24 @@
        <div class="card" style="width: 18rem;">
        <img src="https://img.freepik.com/free-photo/portrait-attractive-young-couple-love-outdoors_1328-4985.jpg?w=740&t=st=1675866636~exp=1675867236~hmac=ecf3d82c2e467cc3d3707aa062d2b4c2dba61e1daed5d3af9b8dcaf6feef6ce7" class="card-img-top" alt="...">
        <div class="card-body">
-       <h4 class="ml16" style='color:#67595E;'>Kiara Barrett</h4>
-       <p class="card-text ml16" style='color:#67595E;'>BRIDEMAIDS</p>
+       <h4 class="" style='color:#67595E;'>Kiara Barrett</h4>
+       <p class="card-text " style='color:#67595E;'>BRIDEMAIDS</p>
        </div>
        </div>
 
        <div class="card" style="width: 18rem;">
        <img src="https://img.freepik.com/free-photo/portrait-handsome-best-man_23-2149044032.jpg?w=740&t=st=1675866495~exp=1675867095~hmac=0237643633a9a7044822a25cb364d3bddf0336d50993586a410936d8a1840a3e" class="card-img-top" alt="...">
        <div class="card-body">
-       <h4 class="ml16" style='color:#67595E;'>Cody James</h4>
-       <p class="card-text ml16" style='color:#67595E;'>GROOMSMEN</p>
+       <h4 class="" style='color:#67595E;'>Cody James</h4>
+       <p class="card-text " style='color:#67595E;'>GROOMSMEN</p>
        </div>
        </div>
 
        <div class="card" style="width: 18rem;">
        <img src="https://img.freepik.com/free-photo/beautiful-bride-wearing-green-wedding-dress_1328-3431.jpg?w=740&t=st=1675866830~exp=1675867430~hmac=3aab3169cffd620f7d124ba32129edf4aeca75de6e457ca7dad25cf5c9193d60" class="card-img-top" alt="...">
        <div class="card-body">
-       <h4 class="ml16" style='color:#67595E;'>Hannah Mullen</h4>
-       <p class="card-text ml16" style='color:#67595E;'>BRIDEMAIDS</p>
+       <h4 class="" style='color:#67595E;'>Hannah Mullen</h4>
+       <p class="card-text " style='color:#67595E;'>BRIDEMAIDS</p>
        </div>
        </div>
 
