--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -5,16 +5,16 @@
 {% block body %}
   <div class="navbarStory">
 <nav class="navbar">
-    <a href="/home" class="logo"> A & J's WEDDING </a>
+    <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
     <div class="nav-links">
       <ul>
-        <li class="active"><a href="/home">HOME</a> </li> 
-        <li><a href="/story">OUR STORY</a> </li>
-        <li><a href="/gallery">OUR GALLERY</a> </li>
+        <li class="lien active"><a href="/home">HOME</a> </li> 
+        <li><a class="lien" href="/story">OUR STORY</a> </li>
+        <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a href="/menu">MENU & ACTIVITIES</a></li>
-        <li><a href="/info">RSVP & INFOS </a></li>
+        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
 
@@ -29,4 +29,144 @@
   <h2 class="h2Story d-flex justify-content-center"> Our menu & activities -  made with love </h2>
 
 </header>
+
+<body class="menu">
+
+<div class="divMenu">
+
+
+  <div class="CarteTotale">
+    <div class="App">
+
+     <div class="card1" style="width: 18rem;">
+     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Appetizers</h5>
+     <p class="card-text">Tomato and basil bruschetta</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Grilled country bread</li>
+     <li class="list-group-item">Chopped cherry tomatoes</li>
+     <li class="list-group-item">Fresh chopped basil</li>
+     </ul>
+     </div>
+
+
+
+     <div class="card1" style="width: 18rem;">
+     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Appetizers</h5>
+     <p class="card-text">Mini vegetable quiches</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Shortcrust pastry</li>
+     <li class="list-group-item">Diced red onions</li>
+     <li class="list-group-item">Diced green peppers</li>
+     </ul>
+     </div>
+
+
+     <div class="card1" style="width: 18rem;">
+     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Appetizers</h5>
+     <p class="card-text">Vietnamese spring rolls</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Rice paper wraps</li>
+     <li class="list-group-item">Chopped romaine lettuce</li>
+     <li class="list-group-item">Sliced cucumber</li>
+     </ul>
+     </div>
+
+     
+
+      </div> <!--class="App"-->
+
+      <div class="MainC">
+
+
+     <div class="card1" style="width: 18rem;">
+     <img src="..." class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Main Courses</h5>
+     <p class="card-text">Grilled salmon with herb butter</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Fresh salmon fillets</li>
+     <li class="list-group-item">Lemon & Olive oil</li>
+     <li class="list-group-item">Mixed herbs</li>
+     </ul>
+     </div>
+
+
+      <div class="card1" style="width: 18rem;">
+     <img src="..." class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Main Courses</h5>
+     <p class="card-text">Beef tenderloin with red wine </p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Beef tenderloin</li>
+     <li class="list-group-item">Red wine & Beef broth</li>
+     <li class="list-group-item">Mixed herbs</li>
+     </ul>
+     </div>
+
+      </div> <!-- div MainC-->
+
+      <div class="Dessert">
+
+       <div class="card1" style="width: 18rem;">
+     <img src="..." class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Desserts</h5>
+     <p class="card-text">Strawberry shortcake</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Biscuits</li>
+     <li class="list-group-item">Fresh strawberries</li>
+     <li class="list-group-item">Whipped cream</li>
+     </ul>
+     </div>
+
+
+      <div class="card1" style="width: 18rem;">
+     <img src="..." class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Desserts</h5>
+     <p class="card-text">Mini tiramisu cups</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Ladyfingers</li>
+     <li class="list-group-item">Mascarpone cheese</li>
+     <li class="list-group-item">Heavy cream</li>
+     </ul>
+     </div>
+
+
+      <div class="card1" style="width: 18rem;">
+     <img src="..." class="card-img-top" alt="...">
+     <div class="card-body">
+     <h5 class="card-title">Desserts</h5>
+     <p class="card-text">Assorted macarons</p>
+     </div> <!--class="card"-->
+     <ul class="list-group list-group-flush">
+     <li class="list-group-item">Almond flour</li>
+     <li class="list-group-item">Powdered sugar </li>
+     <li class="list-group-item">Buttercream filling</li>
+     </ul>
+     </div> 
+
+      </div> <!--desserts -->
+
+
+  </div> <!--CarteTotale-->
+
+  
+
+
+</div> <!--divMenu-->
+</body>
 {% endblock %}
